fixed front page overflow

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -28,6 +28,7 @@
 	grid-template-columns: 100%;
 	grid-auto-rows: auto;
 	grid-auto-flow: row;
+	overflow-x: hidden;
 }
 
 main#main {
